Corrigido texto referente a section Sobre

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         </div>
                     </div>
 
-                    <p>Além do trabalho, possuo um canal no youtube onde compartilho algum conhecimentos voltados a desenvolvimento de Jogos.</p>
+                    <p>Além do trabalho, possuo um canal no youtube onde compartilho conhecimentos voltados a desenvolvimento de Jogos.</p>
 
                 </div>
             </div>
