Alterado formato de imagens para jpg

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="card h-100">
-                                <img src="assets/img/zombie-hunter.PNG" class="card-img-top"
+                                <img src="assets/img/zombie-hunter.jpg" class="card-img-top"
                                     alt="Plataforma educacional">
                                 <div class="card-body">
                                     <h5 class="card-title">Zombie Hunter</h5>
